compiler/tests/errortests/arithmetic/arithmetic-incomplete-rshift.txt
FILENAME:3:24: error: missing right hand side expression after 'right shift' operator
    let y : i32 = x >> ;
                       ^
